--- a/src/template/flow_field.html
+++ b/src/template/flow_field.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tpflow工作流引擎 V7.0</title>
+    <title>Tpflow工作流引擎 v8.0</title>
     <link rel="stylesheet" href="{$static_url}app.css">
-    <link rel="stylesheet" type="text/css" href="{$static_url}app.css?v7.0"/>
+    <link rel="stylesheet" type="text/css" href="{$static_url}app.css?v8.0"/>
 </head>
 <body>
 <div class="layui-fluid">
