➕ 优化Ai步骤信息，审核id改为0系统，审核节点优化非必填，提交按钮修改为 ai
Signed-off-by: 逆天的蝈蝈 <632522043@qq.com>

--- a/src/template/att.html
+++ b/src/template/att.html
@@ -104,7 +104,7 @@
                             <td>
                                 <input type="hidden" class="smalls" name="auto_person" value="8">
                                 <input type="hidden" class="smalls" name="auto_sponsor_ids" value="0">
-                                <input name="auto_sponsor_text"  placeholder="请输入AI模型名称/如果没填写，则调用默认模型" type="text" class="smalls" style="width:100%;" value="{$one['auto_sponsor_text']}" datatype="*" nullmsg="Ai模型不能为空！">
+                                <input name="auto_sponsor_text"  placeholder="请输入AI模型名称/如果没填写，则调用默认模型" type="text" class="smalls" style="width:100%;" value="{$one['auto_sponsor_text']}" nullmsg="Ai模型不能为空！">
                             </td>
                         </tr>
                         {else /}
